@@ -365,6 +365,7 @@ do_destroy(dbref player, char *name, int confirm, NEW_PE_INFO *pe_info)
     break;
   case TYPE_PLAYER:
     /* wait until dbck */
+    do_log(LT_WIZ, player, thing, "Player scheduled for destruction.");
     notify_format(player,
                   (DESTROY_POSSESSIONS ?
                    (REALLY_SAFE ?
@@ -442,6 +443,8 @@ do_undestroy(dbref player, char *name)
                     T("%s's %s has been spared from destruction."),
                     Name(Owner(thing)), object_header(player, thing));
     }
+    if (IsPlayer(thing))
+      do_log(LT_WIZ, player, thing, "Player spared from destruction.");
   } else {
     notify(player, T("That can't be undestroyed."));
   }
@@ -858,6 +861,8 @@ clear_player(dbref thing)
 
   /* Chown any chat channels they own to God */
   chan_chownall(thing, probate);
+
+  do_log(LT_WIZ, thing, NOTHING, "Player destroyed.");
 
   /* Clear out names from the player list */
   delete_player(thing, NULL);
